virtualservices/neuvector-webhook.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: neuvector-vs
  namespace: neuvector # NeuVector가 배포된 네임스페이스
spec:
  hosts:
  - "neuvector.example.com" # NeuVector UI에 접근하기 위한 호스트 이름
  gateways:
  - istio-system/istio-gateway # 사용할 Istio Gateway의 이름
  http:
  - route:
    - destination:
        host: neuvector-svc-admission-webhook # NeuVector WebUI 서비스의 이름
        port:
          number: 443 # NeuVector WebUI 서비스의 포트
